objects/Scenario_Question_Association__c.object
<CustomObject>
    <fields>
        <fullName>IdQuestion__c</fullName>
        <label>Pregunta</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Asociaciones Escenario/Pregunta</relationshipLabel>
        <relationshipName>Scenario_Question_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IdScenario__c</fullName>
        <label>Escenario</label>
        <referenceTo>Scenario__c</referenceTo>
        <relationshipLabel>Asociaciones Escenario/Pregunta</relationshipLabel>
        <relationshipName>Scenario_Question_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Orden</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <label>Asociación Escenario/Pregunta</label>
    <listViews>
        <fullName>All</fullName>
        <columns>IdScenario__c</columns>
        <columns>IdQuestion__c</columns>
        <columns>NAME</columns>
        <columns>Index__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ASOC-{0000}</displayFormat>
        <label>Scenario Question Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asociaciones Escenario/Pregunta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>